# cv-project

./: .gitignore  CMakeLists.txt  LICENSE  README.md
rsc/: Evaluation.xlsx  presentation02.txt  projektplan.doc
rsc/abschlussbericht/: cv_finalreport.tex
rsc/presentation01/: index.html
rsc/presentation01/css/theme/: default.css  simple.css
src/: CMakeLists.txt  bg_sub.cpp  simple_gui.cpp
src/classification_test/: CMakeLists.txt  classification.cpp  flann.cpp  surf.cpp
src/classification_test/haar_classificator/: human.xml  info.txt
src/prototype01/: CMakeLists.txt  classification.cpp  classification.h  display.cpp  display.h  file.cpp  file.h  fileLoader.cpp  fileLoader.h  main.cpp  myBGSubMog2.cpp  myBGSubMog2.h  parameterEvaluator.cpp  parameterEvaluator.h  statistics.cpp  statistics.h  tracking.cpp  tracking.h  trackingreforming.cpp  trackingreforming.h
src/prototype01/haarcascades/: bicycle.xml  car.xml
